--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "labelImg"]
 	path = labelImg
 	url = https://github.com/tzutalin/labelImg.git
+[submodule "Tensorflow/models"]
+	path = Tensorflow/models
+	url = https://github.com/tensorflow/models.git
